# universal-translator

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
examples/: translate.py  translate_anthropic.py  translate_anthropic_bedrock.py  translate_openai.py
tests/: conftest.py  test_llm.py
universal_translator/llm/: anthropic.py  anthropic_bedrock.py  base.py  groq.py  moonshot.py  openai.py
universal_translator/translate/: glossary.py  prompt.py  translation.py
