[tool.poetry]
name = "universal-translator"
version = "0.1.0"
description = ""
authors = ["Leslie Leung <lesily9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tiktoken = "^0.7.0"
openai = "^1.38.0"
langchain-text-splitters = "^0.2.2"
setuptools = "^72.1.0"
python-dotenv = "^1.0.1"
icecream = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^24.0.0"
isort = "^5.13.2"
autoflake = "^2.2.1"
memray = "^1.11.0"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
